todo fix assert for not found

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     build: .
     volumes:
       - ./dive:/app/dive
+      - ./tests:/app/tests
     env_file:
       - .env
     ports:
